add temp landing page html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-testy test
+<!DOCTYPE html>
+
+<html>
+
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>Noya Kohavi</title>
+    <style type = "text/css">
+  body {
+  background-image: url("https://cdn-images-1.medium.com/max/2000/1*u3pi45a5JXHmGnxngevEhA.jpeg");
+  }
+  mark {
+  background-color: rgba(240, 222, 236, .70);
+    color: black;
+  }
+ </style>
+   </head>
+
+   <body>
+
+
+    <p>
+   <div align="center">
+
+        <br><br/>
+        <br><br/>
+        <br><br/>
+        <br><br/>
+
+<iframe src="https://giphy.com/embed/1300w1HkjihpIY" width="200" height="200" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<iframe src="https://giphy.com/embed/6kqtoA6DHgHLy" width="240" height="183" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<iframe src="https://giphy.com/embed/cOZtZNZt2yg2k" width="240" height="151.5" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<iframe src="https://giphy.com/embed/MBAs3td0sgj72" width="240" height="181.5" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<iframe src="https://giphy.com/embed/hzgceaTTm0zSw" width="240" height="135" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+
+
+
+    <br><br/>
+
+        <mark><b>Noya Kohavi</b> is a writer, reporter and technologist based in New York City.
+            <br><br/>
+            You can reach her at noya@noyakohavi.com
+            <br><br/>
+            For information about her visual discovery engine LINEAGE click <a href="https://brown.columbia.edu/portfolio/lineage/">here</a>
+            <br><br/>
+            Content forthcoming. Here is some music for you to enjoy!</mark>
+            <br><br/>
+
+
+    </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Gbtvn0bsw1Y" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+       </div>
+
+
+
+   </body>
+
+
+
+
+</html>
