removed background and added haaretz links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <title>Noya Kohavi</title>
     <style type = "text/css">
   body {
-  background-image: url("https://cdn-images-1.medium.com/max/2000/1*u3pi45a5JXHmGnxngevEhA.jpeg");
   }
   mark {
   background-color: rgba(240, 222, 236, .70);
@@ -36,6 +35,8 @@
 
 
 
+
+
     <br><br/>
 
         <mark><b>Noya Kohavi</b> is a writer, reporter and technologist based in New York City.
@@ -44,7 +45,10 @@
             <br><br/>
             For information about her visual discovery engine LINEAGE click <a href="https://brown.columbia.edu/portfolio/lineage/">here</a>
             <br><br/>
-            Content forthcoming. Here is some music for you to enjoy!</mark>
+            To read her most recent magazine stories for Ha'aretz click <a href="http://www.haaretz.com/misc/writers/WRITER-1.4968558">here</a> for English
+            and <a href="https://www.haaretz.co.il/misc/search-results?searchType=textSearch&text=&startDate=&endDate=&section=2.385&authorNames=נויה+כוכבי">here</a> for Hebrew
+            <br><br/>
+            More content forthcoming. Here is some music for you to enjoy!</mark>
             <br><br/>
 
 
