removed top blank spaces and fixed wording

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <p>
    <div align="center">
 
-        <br><br/>
-        <br><br/>
+
         <br><br/>
         <br><br/>
 
@@ -43,7 +42,7 @@
             <br><br/>
             You can reach her at noya@noyakohavi.com
             <br><br/>
-            For information about her visual discovery engine LINEAGE click <a href="https://brown.columbia.edu/portfolio/lineage/">here</a>
+            For information on her visual discovery engine LINEAGE click <a href="https://brown.columbia.edu/portfolio/lineage/">here</a>
             <br><br/>
             To read her most recent magazine stories for Ha'aretz click <a href="http://www.haaretz.com/misc/writers/WRITER-1.4968558">here</a> for English
             and <a href="https://www.haaretz.co.il/misc/search-results?searchType=textSearch&text=&startDate=&endDate=&section=2.385&authorNames=נויה+כוכבי">here</a> for Hebrew
